[package]
name = "klickenhaus"
version = "0.1.3"
authors = ["Artem Shein <sc-github@aisys.ru>"]
edition = "2018"
description = "A simple client library for Yandex ClickHouse"
license = "MIT"
repository = "https://github.com/artemshein/klickenhaus"
keywords = ["database", "ClickHouse"]
categories = ["database"]

[dependencies]
reqwest = "0.9.9"
failure = "0.1.5"
